[package]
name = "JWT"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.11"
ed25519-dalek = { version = "2.1.1", optional = true }
hmac = { version = "0.12.1", optional = true }
sha2 = { version = "0.10.8", optional = true }

[features]
default = ["hs256"]
hs256 = ["dep:hmac", "dep:sha2"]
ed25519 = ["ed25519-dalek"]