[package]
name = "jsonweb"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.11"
hmac = { version = "0.12.1", optional = true }
sha2 = { version = "0.10.8", features = ["oid"], optional = true }
rsa = { version = "0.9.7", optional = true }
p256 = { version = "0.13.2", optional = true }
pkcs1 = "0.7.5"
p256 = { version = "0.13.2", features = ["pem"], optional = true }

[features]
default = ["hs256"]
hs256 = ["dep:hmac", "dep:sha2"]
rs256 = ["dep:rsa", "dep:sha2"]
es256 = ["dep:p256"]
#ed25519 = ["ed25519-dalek"]
